--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,13 @@
 body, html {
   background-image: url("assets/images/hero-photo.jpg");
   height: 100%;
-   height: 100%;
   background-position: relative;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-h1, h2, p {
+h1, h3, p {
+  
   color: #fff;
   text-shadow: 1px 1px #222;
 }
@@ -33,7 +33,7 @@ h1, h2, p {
       border: 0;
       font-size: 12px !important;
       line-height: 1.42857143 !important;
-      letter-spacing: 4px;
+      letter-spacing: 1px;
       border-radius: 0;
       font-family: Montserrat, sans-serif;
   }
@@ -46,6 +46,7 @@ h1, h2, p {
       color: #000 !important;
       background-color: #fff !important;
       border-style: inset;
+      text-shadow: none;
   }
   .navbar-default .navbar-toggle {
       border-color: transparent;
@@ -55,5 +56,8 @@ h1, h2, p {
 .btn {
   background-color: grey;
   text-shadow: 1px 1px #222;
+  height: 20px;
+  padding: 10px;
+  margin: 10px;
 }
 
